# fomega

./: .gitignore  Makefile  README.md  dune-project  f.js  index.html  jsmain.ml  lexer.mll  parser.mly  process.ml  process.mli  support.ml  support.mli  syntax.ml  syntax.mli
examples/: bools.f  bools_via_sums.f  bools_with_existentials.f  equality.f  hoas.f  lists.f  nats.f  nested_types.f  pairs.f  simply-typed.f  sums.f
opam/: descr  opam  url
opam/files/: fomega.install
src/: .depend  Makefile  core.ml  core.mli  dune  jsmain.ml  lexer.mll  main.ml  parser.mly  process.ml  process.mli  runweb.ml  support.ml  support.mli  syntax.ml  syntax.mli
src/web/: columns.css  dune  index.html
test/: dune  examples.t
